# conway

./: README.md  conway.sln
conway/: CMakeLists.txt  conway.vcxproj  conway.vcxproj.filters  main.cpp
conway/console_gfx/: character.cpp  character.h  console_gfx.cpp  console_gfx.h  frame.cpp  frame.h  screen.cpp  screen.h
conway/game/: game.cpp  game.h
conway/game_logic/: gol.cpp  gol.h
